忘记密码和注册

--- a/module-user/src/main/res/values/strings.xml
+++ b/module-user/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Module-user</string>
     <string name="user_string"> </string>
-    <string name="privacy_tips">已阅读《用户协议》和《隐私政策》</string>
+    <string name="privacy_tips">《用户协议》和《隐私政策》</string>
     <string name="privacy_tips_key1">《用户协议》</string>
     <string name="privacy_tips_key2">《隐私政策》</string>
 </resources>
